--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,8 @@ Mkfile.old
 dkms.conf
 
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+*.out
+*.txt
 
 # Local History for Visual Studio Code
 .history/
